[package]
name = "abc148"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc148-a = { alias = "a", problem = "https://atcoder.jp/contests/abc148/tasks/abc148_a" }
abc148-b = { alias = "b", problem = "https://atcoder.jp/contests/abc148/tasks/abc148_b" }
abc148-c = { alias = "c", problem = "https://atcoder.jp/contests/abc148/tasks/abc148_c" }
abc148-d = { alias = "d", problem = "https://atcoder.jp/contests/abc148/tasks/abc148_d" }
abc148-e = { alias = "e", problem = "https://atcoder.jp/contests/abc148/tasks/abc148_e" }
abc148-f = { alias = "f", problem = "https://atcoder.jp/contests/abc148/tasks/abc148_f" }

[[bin]]
name = "abc148-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc148-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc148-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc148-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc148-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc148-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
