[package]
name = "abc153"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc153-a = { alias = "a", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_a" }
abc153-b = { alias = "b", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_b" }
abc153-c = { alias = "c", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_c" }
abc153-d = { alias = "d", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_d" }
abc153-e = { alias = "e", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_e" }
abc153-f = { alias = "f", problem = "https://atcoder.jp/contests/abc153/tasks/abc153_f" }

[[bin]]
name = "abc153-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc153-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc153-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc153-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc153-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc153-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
