[package]
name = "abc244"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc244-a = { alias = "a", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_a" }
abc244-b = { alias = "b", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_b" }
abc244-c = { alias = "c", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_c" }
abc244-d = { alias = "d", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_d" }
abc244-e = { alias = "e", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_e" }
abc244-ex = { alias = "ex", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_h" }
abc244-f = { alias = "f", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_f" }
abc244-g = { alias = "g", problem = "https://atcoder.jp/contests/abc244/tasks/abc244_g" }

[[bin]]
name = "abc244-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc244-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc244-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc244-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc244-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc244-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc244-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc244-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

[dev-dependencies]
